<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/first_num"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/second_num"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="number"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/operator_selection">

        <RadioButton
            android:id="@+id/add_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add_icon"
            android:textSize="20sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/subtract_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/subtract_icon"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/multiply_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply_icon"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/divide_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/divide_icon"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/mod_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/modulus_icon"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        android:layout_marginTop="10dp"/>

</LinearLayout>